[project]
name = "td-flow-minari"
version = "0.1.0"
description = "Implementation of TD-Flow: Temporal Difference Flow Matching"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "torchdiffeq>=0.2.3",
    "minari>=0.4.0",
    "gymnasium>=0.29.0",
    "mujoco>=3.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "h5py>=3.8.0",
    "tqdm>=4.65.0",
    "hydra-core>=1.3.2",
    "wandb>=0.15.0",
    "huggingface-hub>=1.3.1",
    "shimmy[dm-control]>=2.0.0",
    "stable-baselines3>=2.7.1",
    "ipywidgets>=8.1.8",
    "imageio[pyav]>=2.37.2",
    "argparse>=1.4.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.25.0",   
    "pytest>=7.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
